# auv

./: .gitignore  README.md  driver_run.py  driver_run_old.py  interface.md  requirements.txt  software_architecture.md
auv_acoustics/: package.xml  setup.cfg  setup.py
auv_acoustics/auv_acoustics/: acoustic.py  daq_driver.py  ping_locator.py  signal_processing.py
auv_acoustics/test/: simulate_data.py
auv_controller/: README.md  package.xml  setup.cfg  setup.py
auv_controller/auv_controller/: allocator.py  allocator_tuning.py  allocator_tuning_constants.py  constants.py  controller.py  get_constants.py  oldRS_constants.py  old_constants.py  pid_control.py  velocity_pid.py
auv_controller/config/: controller_constants_simulator copy.yaml  controller_constants_simulator.yaml  heave_CEM.yaml  load_all_params.sh  pid_constants.yaml  rpy_CEM.yaml  surge_CEM.yaml  sway_CEM.yaml  thruster_positions.yaml
auv_controller/launch/: controller.launch.py
auv_drivers/: README.md  package.xml  setup.cfg  setup.py
auv_drivers/auv_drivers/: .node.py.swp  README.txt  node.py  router.py  usb.py
auv_drivers/config/: dvl_params.yaml
auv_drivers/launch/: drivers.launch.py
auv_localization/: README.md  package.xml  setup.cfg  setup.py
auv_mission_control/: README.md  package.xml  setup.cfg  setup.py
auv_msgs/: CMakeLists.txt  package.xml
auv_msgs/action/: Interrupt.action  Scan.action  Setpoint.action
auv_msgs/msg/: AuvState.msg  BBoxes.msg  BoundingBox.msg  CurrentNavId.msg  DVL.msg  DVLBeamsArr.msg  DVLOrient.msg  DVLVel.msg  GlobalForces.msg  NavStatus.msg  ObjectDetected.msg  Pose.msg  PwmData.msg  StereoVisionFrame.msg  ThrusterForces.msg  VisionSetpoints.msg
auv_msgs/srv/: AlignService.srv  GripperState.srv  MarkerDropperState.srv  PingerAcq.srv  PwmCap.srv  ScanService.srv  SetDetector.srv  SetTorpedo.srv  TorpedoState.srv
auv_navigator/: README.md  package.xml  setup.cfg  setup.py
auv_vision/: README.md  package.xml  setup.cfg  setup.py  test_scam.py
auv_vision/auv_vision/: aaaa.py  (+21 more)
(+41 files in other folders)
